creating load balancer to handler traffic better by forwarding requests to different ports